--- a/vigneshwaran/web/web.css
+++ b/vigneshwaran/web/web.css
@@ -21,12 +21,12 @@ body{
     background-color: rgb(49, 136, 231);
 }
 .padding{
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 .padding0{
-    padding-top: 26px;
-    padding-bottom: 26px;
+    padding-top: 37.5px;
+    padding-bottom: 37.5px;
 }
 .border{
     border-bottom: 10px solid rgb(224, 129, 71);
@@ -61,21 +61,21 @@ button{
     border-top-right-radius: 5px;
 }
 .font-style{
-    font-size: 25px;
+    font-size: 40px;
     font-weight: bold;
     color: white;
 }
 .font-style1{
-    font-size: 15px;
+    font-size: 25px;
     font-weight: bold;
     color: rgb(199, 99, 14);
 }
 .font-style2{
-    font-size: 10px;    
-    font-weight: italic;
+    font-size: 15px;    
+    font-weight: bold;
 }
 .font-style3{
-    font-size: 10px;
+    font-size: 15px;
     font-weight: bold;
 }
 .font-style4{
@@ -84,36 +84,41 @@ button{
     color: rgb(158, 64, 10);
 }
 .font-style5{
-    font-size: 10px;
+    font-size: 15px;
     font-weight: bold;
     color: rgb(118, 74, 49);
 }
 .font-style6{
-    font-size: 12px;
+    font-size: 20px;
     font-weight: bold;
+    padding-bottom: 10px;
 }
 .font-style7{
-    font-size: 10px;
+    font-size: 15px;
     font-weight: bold;
     color: rgb(139, 60, 0);
 }
 .font-style8{
-    font-size: 15px;
+    font-size: 20px;
     font-weight: bold;
     color: white;
 }
 .font-style9{
-    font-size: 12px;
+    font-size: 15px;
     font-weight: bold;
     color: white;
 }
 .font-style10{
-    font-size: 10px;
+    font-size: 12px;
     font-weight: bold;
     color: rgb(118, 74, 49);
 }
+.font-style11{
+    font-size: 25px;
+    font-weight: bold;
+}
 .feet{
-    font-size: 15px;
+    font-size: 25px;
     font-weight: bold;
     color: white;
     background-color: rgb(234, 162, 104);
@@ -121,7 +126,7 @@ button{
     margin-right: 5px;
 }
 .tweet{
-    font-size: 15px;
+    font-size: 25px;
     font-weight: bold;
     color: white;
     background-color: rgb(130, 197, 205);
@@ -129,7 +134,7 @@ button{
     margin-right: 5px;
 }
 .face{
-    font-size: 15px;
+    font-size: 25px;
     font-weight: bold;
     color: white;
     background-color: rgb(75, 104, 164);
@@ -148,20 +153,32 @@ button{
     padding-top: 10px;
     padding-bottom: 10px;
 }
+.padding2{
+    padding-top: 10px;
+    padding-bottom: 120px;
+    border-bottom: 1px solid black;
+}
 .box{
     margin-top: 5px;
     margin-bottom: 5px;
-    padding-top: 50px;
-    padding-bottom: 50px;
+    padding-top: 120px;
+    padding-bottom: 120px;
     background-color: white;
     border: 1px solid black;
 }
 .box1{
     margin-top: 20px;
-    padding-top: 40px;
-    padding-bottom: 40px;
+    padding-top: 60px;
+    padding-bottom: 60px;
     background-color: white;
     border: 4px double rgb(255, 190, 86);
+}
+.box5{
+    margin-top: 20px;
+    padding-top: 45px;
+    padding-bottom: 45px;
+    background-color: white;
+    border: 4px solid black;
 }
 .box2{
     margin-top: 15px;
@@ -197,4 +214,12 @@ button{
 }
 .widths{
     text-indent: 80px;
+}
+.wid{
+    width: 45%;
+    margin: 0 auto;
+}
+.wid1{
+    width: 99%;
+    margin: 0 auto;
 }
