--- a/vigneshwaran/web/web.css
+++ b/vigneshwaran/web/web.css
@@ -168,17 +168,16 @@ button{
 }
 .box1{
     margin-top: 20px;
-    padding-top: 60px;
-    padding-bottom: 60px;
-    background-color: white;
-    border: 4px double rgb(255, 190, 86);
+    padding: 1px;
+    background-color: orange;
+    border: 1px solid black;
 }
 .box5{
-    margin-top: 20px;
-    padding-top: 45px;
-    padding-bottom: 45px;
+    margin: 2px;
+    padding-top: 50px;
+    padding-bottom: 50px;
     background-color: white;
-    border: 4px solid black;
+    border: 1px solid black;
 }
 .box2{
     margin-top: 15px;
