--- a/abinash/Template_8/Task_8/style.css
+++ b/abinash/Template_8/Task_8/style.css
@@ -177,6 +177,7 @@ body{
 @media only screen and (min-width:481px ) and (max-width:520px){
     .nofloat{
         float: none;
+        margin-top: 10px;
         width: 100%;
     }
 }
@@ -184,6 +185,7 @@ body{
 @media only screen and (min-width:521px ) and (max-width:620px){
     .nofloat{
         float: none;
+        margin-top: 10px;
         width: 100%;
     }
 }
@@ -191,6 +193,7 @@ body{
 @media only screen and (min-width:621px ) and (max-width:768px){
     .nofloat{
         float: none;
+        margin-top: 10px;
         width: 100%;
     }
 }
@@ -198,6 +201,7 @@ body{
 @media only screen and (min-width:769px ) and (max-width:992px){
     .nofloat{
         float: none;
+        margin-top: 10px;
         width: 100%;
     }
 }
@@ -205,6 +209,7 @@ body{
 @media only screen and (min-width:993px ) and (max-width:1024px){
     .nofloat{
         float: none;
+        margin-top: 10px;
         width: 100%;
     }
 }
