--- a/sarupriya/JavaScript/form/style.css
+++ b/sarupriya/JavaScript/form/style.css
@@ -7,13 +7,33 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
 }
-.txtalgin{
+.bg_a{
+    background-color: #9c62d3;
+    border-radius: 40px;
+    border: none;
+}
+.txtalign{
     text-align: center;
 }
 .width{
-    width: 60%;
+    width: 50%;
+}
+.width_a{
+    width: 40%;
+}
+.width_b{
+    width: 15%;
+}
+.margin{
     margin: 0 auto;
 }
 .color_a{
-    color: rgb(156, 98, 211);
+    color: #9c62d3;
+}
+.padding{
+    padding-top: 150px;
+    padding-bottom: 150px;
+}
+.style{
+    font-family: 'Pangolin', cursive;
 }
