--- a/janani/temp 2/style.css
+++ b/janani/temp 2/style.css
@@ -1,4 +1,4 @@
-boby{
+body{
     margin: 0 auto;
     padding: 0;
 }
@@ -35,4 +35,6 @@ boby{
     padding-top: 40px;
     padding-bottom: 40px;
 }
-.stan
+.bg_color{
+    background-color: #0D7962;
+}
