--- a/vigneshwaran/template-6/style.css
+++ b/vigneshwaran/template-6/style.css
@@ -25,7 +25,7 @@ header{
 .wfl2{
     width: 23.5%;
     float: left;
-    margin-right: 20px;
+    margin-right: 2%;
     margin-top: 70px;
     background-color: white;
     margin-bottom: 30px;
