--- a/janani/temp 2/style.css
+++ b/janani/temp 2/style.css
@@ -9,14 +9,14 @@ body{
     border: 2px solid white;
 }
 .margin{
-    margin-bottom: 10px;
+    margin-bottom: 5px;
 }
 .txt_center{
     text-align: center;
 }
 .padding{
-    padding-top: 1px;
-    padding-bottom: 1px;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 .float_left{
     float:left;
@@ -28,12 +28,12 @@ body{
     width: 46%;
 }
 .padding2{
-    padding-top: 49px;
-    padding-right: 49px;
+    padding-top: 59px;
+    padding-bottom: 59px;
 }
 .padding3{
-    padding-top: 50px;
-    padding-bottom: 50px;
+    padding-top: 70px;
+    padding-bottom: 70px;
 }
 .bg_color{
     background-color: #0d7962;
@@ -42,5 +42,5 @@ body{
     color:white;
 }
 .font_size2{
-    font-size:small;
+    font-size: 25px;;
 }
