--- a/vigneshwaran/template-7/style.css
+++ b/vigneshwaran/template-7/style.css
@@ -14,6 +14,11 @@ body{
     font-size: 50px;
     color: white;
     font-weight: bolder;
+}
+.font-style7{
+    font-size: 50px;
+    color: white;
+    font-weight: bolder;
     padding-left: 40px;
 }
 .font-style1{
