--- a/abinash/bootstrap/style.css
+++ b/abinash/bootstrap/style.css
@@ -287,7 +287,7 @@ span {
     }
 }
 
-@media screen and (min-width:768px) and (max-width:992px) {
+@media screen and (min-width:768px) and (max-width:991px) {
     .nofloat{
         margin-top: 10px;
     }
@@ -303,9 +303,12 @@ span {
     .margin1{
         margin: 0 auto;
     }
+    .width5{
+        width: 25%;
+    }
 }
 
-@media screen and (min-width:993px) and (max-width:1199px) {
+@media screen and (min-width:992px) and (max-width:1199px) {
     .nofloat{
         margin-top: 10px;
     }
@@ -319,3 +322,5 @@ span {
         margin: 0 auto;
     }
 }
+
+ 
