--- a/abinash/template 6/style.css
+++ b/abinash/template 6/style.css
@@ -237,18 +237,33 @@ a{
         width: 100%;
         
     }
-    .txt_align{
+    .txt_c{
        text-align: center;
     }
  
-
-    .img_align{
-        text-align: center;
+    .txt_r{
+        text-align: right;
+        margin-right: 10px;
     }
+     .width1{
+        width: 10%;
+     }
 
-    .img_prop{
-        max-width: max-content;
-    }
+    
+
+     .width2{
+        width: 7%;
+     }
+     .width3{
+        width: 70%;
+        padding-top: 10px;
+     }
+
+     .margin1{
+        margin: 0 auto;
+     }
+
+    
 }
 
 @media  screen and (min-width:481px) and (max-width:560px) {
@@ -258,7 +273,20 @@ a{
         width: 100%;
      }
      
-     .txt_align{
+     .txt_c{
         text-align: center;
      }
+
+     .width1{
+        width: 15%;
+     }
+
+     .width2{
+        width: 10%;
+     }
+
+     .txt_r{
+        text-align: right;
+        margin-right: 10px;
+    }
 }
